# ud1_RAIC2017_CodeWars

./: CMakeLists.txt  MyStrategy.cpp  MyStrategy.h  MyUtils.hpp  OldStrat.cpp  OldStrat.hpp  README.md  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Simulator.cpp  Simulator.hpp  Strat.cpp  Strat.hpp  Strategy.h  main.cpp  raic2017rts.kdev4
csimplesocket/: SimpleSocket.h
model/: ActionType.h  CircularUnit.cpp  CircularUnit.h  Facility.cpp  Facility.h  FacilityType.h  Game.cpp  Game.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerContext.cpp  PlayerContext.h  TerrainType.h  Unit.cpp  Unit.h  Vehicle.cpp  Vehicle.h  VehicleType.h  VehicleUpdate.cpp  VehicleUpdate.h  WeatherType.h  World.cpp  World.h
